# BondX

./: -files  grep mlops  .env  .env.example  AI_INTEGRATION_README.md  BONDX_ADVANCED_ANALYTICS_README.md  BONDX_AI_ANALYTICS_README.md  BONDX_AI_AUTONOMOUS_TRAINING_README.md  BONDX_IMPLEMENTATION_COMPLETE.md  BONDX_INTEGRATION_COMPLETE.md  CORPORATE_BONDS_INTEGRATION_README.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  ENTERPRISE_IMPLEMENTATION_README.md  FRONTEND_API_CONFIG.js  INTEGRATION_README.md  LIQUIDITY_PULSE_IMPLEMENTATION_SUMMARY.md  LIQUIDITY_RISK_TRANSLATOR_README.md  Makefile  PHASE_A_IMPLEMENTATION_README.md  PHASE_B_DOCUMENTATION.md  PHASE_B_IMPLEMENTATION_SUMMARY.md  PHASE_C_IMPLEMENTATION_README.md  PHASE_D_G_IMPLEMENTATION_SUMMARY.md  PHASE_D_IMPLEMENTATION_SUMMARY.md  PRODUCTION_README.md  QUALITY_ASSURANCE_README.md  README.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_README.md  autonomous_trainer_config.yaml  bondx_ai_analyzer.py  bondx_ai_autonomous_trainer.py  bondx_ai_dashboard.py  bondx_ai_liquidity_analyzer.py  commit_all.bat  commit_all_changes.ps1  commit_and_push.ps1  demo_results.py  deploy_backend.py  (+42 more)
backend/: .gitignore  DEPLOYMENT.md  README.md  hardhat.config.ts  package.json  tsconfig.json
backend/contracts/: Bond1155.sol
backend/scripts/: deploy.ts  seed.ts
backend/test/: Bond1155.test.ts
bond_scraper/: scrape_bonds.py  scrape_macro.py  scrape_news.py  scrape_ratings.py
bondx/: __init__.py  main.py  main_integrated.py
bondx/ai_risk_engine/: __init__.py  advanced_volatility_models.py  advisory_system.py  ai_service_layer.py  autonomous_trading_system.py  enhanced_ml_pipeline.py  exit_recommender.py  hft_risk_engine.py  liquidity_intelligence_service.py  liquidity_risk_orchestrator.py  ml_pipeline.py  model_governance.py  nlp_engine.py  real_time_analytics.py  real_time_streaming.py  risk_scoring.py  yield_prediction.py
bondx/analysis/: __init__.py  heatmaps.py  liquidity_insights.py  stress_engine.py
bondx/api/: __init__.py
bondx/auction_engine/: __init__.py  allocation_engine.py  auction_engine.py  auction_mechanisms.py  clearing_engine.py  (+3 more)
data/: corporate_bonds.csv  rbi_liquidity.csv
deploy/: README.md
docs/: CONTRIBUTING.md  GOLDEN_POLICY.md
ops/: README.md
src/: App-final.tsx  App-simple.tsx  App-working.tsx  App.tsx  main.tsx
tests/: README.md
(+257 files in other folders)
